--- a/DoAnMon/Views/Shared/_Layout.cshtml
+++ b/DoAnMon/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
 
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: Arial, Helvetica, sans-serif;
         }
         /*PHẦN MENU CHÍNH*/
         .menu-container {
@@ -37,7 +37,12 @@
             display: flex;
             justify-content: center;
             align-items: center; 
-            height: 80px; 
+            height: 80px;
+            width: 100%;
+            position: fixed; /* Cố định menu */
+            top: 0; /* Đặt menu ở phía trên cùng */
+            left: 0;
+            z-index: 1000;
         }
 
         .menu {
@@ -75,10 +80,9 @@
                     padding-bottom: 10px;
                 }
         /* Menu dọc */
-        .vertical-menu {
-            display: none; /* Ẩn menu dọc mặc định */
-            background-color: rgba(51, 51, 51, 0.8); /* Màu nền mờ với độ trong suốt 80% */
-            height: 100%;
+        /* .vertical-menu {
+            display: none;
+            background-color: rgba(51, 51, 51, 0.8); 
             width: 250px;
             position: fixed;
             top: 10px;
@@ -102,7 +106,7 @@
             }
 
             .vertical-menu a:hover {
-                background-color: rgba(255, 255, 255, 0.1); /* Hiệu ứng hover với màu nền mờ nhạt */
+                background-color: rgba(255, 255, 255, 0.1); 
             }
 
             .vertical-menu .close-btn {
@@ -110,7 +114,7 @@
                 top: 0;
                 right: 0;
                 font-size: 36px;
-            }
+            } */
 
         /* Biểu tượng menu */
        /*  .menu-icon {
@@ -125,21 +129,21 @@
              padding: 0;
              font-family: Arial, sans-serif;
          } */
-
+/* 
         .container {
             display: flex;
             width: 1100px;
-            justify-content: center; /* Căn giữa nội dung */
+            justify-content: center; 
         }
 
         .sidebar,
         .main-content,
         .sidebar-right {
             padding: 20px;
-        }
+        } */
         /* PHẦN NỘI DUNG BÊN TRÁI*/
-        .sidebar {
-            width: 200px; /* Độ rộng của cột chủ đề */
+        /* .sidebar {
+            width: 200px;
             background-color: #E3E1D9;
             margin-top: 20px;
             right: 0;
@@ -159,15 +163,14 @@
                 }
 
                     .sidebar ul li:last-child {
-                        border-bottom: none; /* Loại bỏ đường viền ở mục cuối cùng */
+                        border-bottom: none; 
                     }
 
                     .sidebar ul li a {
-                        /* text-decoration: none; */
+                       
                         color: #333;
                         font-size: 15px;
                         padding: 5px;
-                        /* display: block; */
                         text-align: left;
                         overflow: hidden;
                         white-space: wrap;
@@ -182,18 +185,18 @@
                         }
 
             .sidebar h2 {
-                margin-top: 10px; /* Loại bỏ khoảng cách trên đầu tiêu đề */
-                margin-bottom: 10px; /* Tạo khoảng cách dưới tiêu đề */
+                margin-top: 10px;
+                margin-bottom: 10px; 
                 text-align: center;
-            }
+            } */
         /*PHẦN NỘI DUNG CHÍNH*/
-        .main-content {
+        /* .main-content {
             flex-grow: 1;
             background-color: #F6F5F2;
-            /*Khoảng cách giữa cột chủ đề và cột nội dung bên phải */
+           
             width: 650px;
             margin-top: 20px;
-            /* border: 1px solid #949191; */
+          
         }
 
             .main-content .post-content {
@@ -213,11 +216,11 @@
                 font-size: 45px;
                 font-weight: bold;
             }
-
+ */
 
         /*PHẦN NỘI DUNG BÊN PHẢI*/
-        .sidebar-right {
-            width: 250px; /* Độ rộng của cột nội dung bên phải */
+        /* .sidebar-right {
+            width: 250px; 
             background-color: #E3E1D9;
             margin-top: 20px;
             height: 900px;
@@ -226,13 +229,12 @@
 
         .post {
             background-color: #ffffff;
-            border: 1px solid #ccc; /* Đường viền khung bài viết */
-            padding: 10px; /*Khoảng cách giữa đường viền và nội dung */
+            border: 1px solid #ccc; 
+            padding: 10px; 
             border-radius: 5px;
-            margin-bottom: 20px; /* Khoảng cách giữa các bài viết */
+            margin-bottom: 20px; 
             text-align: left;
-            /* overflow: hidden;
-                                    text-overflow: ellipsis; */
+           
             width: 100%;
             height: 250px;
             display: flex;
@@ -242,18 +244,18 @@
 
 
             .post img {
-                margin-bottom: 5px; /* Khoảng cách giữa hình ảnh và nội dung */
-                width: 100%; /* Đảm bảo hình ảnh không quá rộng */
+                margin-bottom: 5px;
+                width: 100%;
                 height: 120px;
             }
 
         .post-content {
-            height: auto; /* Chiều cao tối đa cho nội dung */
-            */ text-align: left; /* Căn trái nội dung */
-            /*  margin-top: 10px; /* khoảng cách từ hình ảnh tới nội dung */ */ padding: 10px;
+            height: auto; 
+           
+            /padding: 10px;
             box-sizing: border-box;
             overflow: hidden;
-        }
+        } */
 
         /*  .post-content { */
         /* overflow: hidden; /* Ẩn bất kỳ nội dung nào vượt quá khung */ */
@@ -262,63 +264,62 @@
         /*  -webkit-line-clamp: 3; /* Số dòng tối đa mà nội dung có thể hiển thị */ */
         /*  -webkit-box-orient: vertical; */
         /*  }  */
-        .post h3 {
-            margin-top: 0; /* Loại bỏ khoảng cách trên cùng của tiêu đề */
+        /* .post h3 {
+            margin-top: 0; 
             font-size: 8px;
             text-align: center;
         }
 
         .post a {
-            display: block; /* Biến liên kết thành một khối để có thể căn lề và thêm padding */
-            text-align: center; /* Căn giữa nút "Đọc thêm" */
-            padding: 5px 0; /* Khoảng cách giữa các bên của nút */
-            background-color: #f0f0f0; /* Màu nền của nút */
-            color: #333; /* Màu chữ của nút */
-            text-decoration: none; /* Loại bỏ gạch chân của liên kết */
+            display: block; 
+            text-align: center; 
+            padding: 5px 0;
+            background-color: #f0f0f0;
+            color: #333; 
+            text-decoration: none; 
         }
 
             .post a:hover {
-                background-color: #e0e0e0; /* Màu nền khi di chuột vào nút */
-            }
+                background-color: #e0e0e0;
+            } */
 
         /* Responsive styles */
-        @@media screen and (max-width: 768px) {
+        /* @@media screen and (max-width: 768px) {
 
             .menu {
-                display: none; /* Ẩn menu ngang */
+                display: none; 
             }
 
             .menu-icon {
-                display: block; /* Hiển thị biểu tượng menu */
+                display: block; 
             }
 
             .container {
                 display: flex;
                 width: 100%;
-                justify-content: center; /* Căn giữa nội dung */
+                justify-content: center; 
             }
 
             .sidebar,
             .main-content,
             .sidebar-right {
                 padding: 20px;
-            }
+            } */
             /* PHẦN NỘI DUNG BÊN TRÁI*/
-            .sidebar {
+          /*   .sidebar {
                 display: none;
-            }
+            } */
             /*PHẦN NỘI DUNG CHÍNH*/
-            .main-content {
+            /* .main-content {
                 flex-grow: 1;
                 background-color: #F6F5F2;
-                /*Khoảng cách giữa cột chủ đề và cột nội dung bên phải */
                 width: 400px;
                 margin-top: 20px;
                 height: 800px;
                 /* border: 1px solid #949191; */
             }
 
-                .main-content .post-content {
+               /*  .main-content .post-content {
                     text-overflow: inherit;
                     overflow: auto;
                     display: block;
@@ -334,67 +335,67 @@
             .sidebar-right {
                 display: none;
             }
-        }
+        } */ 
 
         /* STYLE CHO TRANG LỚP HỌC  */
 
-        .left-column {
-            width: 250px; /* Độ rộng của cột bên trái */
-            background-color: #f0f0f0; /* Màu nền của cột bên trái */
-            padding: 20px; /* Khoảng cách nội dung với viền của cột */
+       /*  .left-column {
+            width: 250px; 
+            background-color: #f0f0f0; 
+            padding: 20px; 
             height: 1500px;
         }
 
         .image-frame {
-            border: 1px solid #ccc; /* Viền của khung hình */
-            border-radius: 50%; /* Bo tròn các góc */
-            overflow: hidden; /* Ẩn bất kỳ phần nào của hình ảnh vượt ra ngoài khung */
+            border: 1px solid #ccc; 
+            border-radius: 50%;
+            overflow: hidden; 
             width: 150px;
             margin-left: 30px;
         }
 
             .image-frame img {
-                width: 100%; /* Đảm bảo hình ảnh chiếm đầy đủ chiều rộng của khung */
-                height: auto; /* Đảm bảo tỷ lệ khung hình ảnh được duy trì */
-            }
+                width: 100%; 
+                height: auto; 
+            } */
 
         /* chính----------------------------------------------*/
-        .chinh-content {
-            flex-grow: 1; /* Main content mở rộng để lấp đầy không gian trống */
-            padding: 20px; /* Khoảng cách nội dung với viền của main content */
+       /*  .chinh-content {
+            flex-grow: 1; 
+            padding: 20px; 
             background-color: #c2c0c0;
             margin-top: 0;
         }
 
         .frame-container {
             display: flex;
-            flex-wrap: wrap; /* Cho phép tự động xuống hàng */
+            flex-wrap: wrap; 
             margin-top: 50px;
         }
 
         .frame {
-            flex: 1 0 calc(33.33% - 20px); /* Tối đa 3 khung trên cùng một hàng */
-            margin-right: 20px; /* Khoảng cách giữa các khung */
-            margin-bottom: 20px; /* Khoảng cách giữa các hàng */
-            border: 1px solid #ccc; /* Viền của khung */
-            border-radius: 5px; /* Bo tròn các góc */
+            flex: 1 0 calc(33.33% - 20px); 
+            margin-right: 20px;
+            margin-bottom: 20px; 
+            border: 1px solid #ccc; 
+            border-radius: 5px;
             height: 250px;
         }
 
             .frame:last-child {
-                margin-right: 0; /* Loại bỏ khoảng cách bên phải của khung cuối cùng trên hàng */
+                margin-right: 0; 
             }
 
 
         .frame-header {
-            background-color: #f0f0f0; /* Màu nền của phần header */
-            padding: 10px; /* Khoảng cách giữa nội dung và viền */
+            background-color: #f0f0f0;
+            padding: 10px; 
             height: 100px;
             border-radius: 5px 5px 0 0;
         }
 
             .frame-header h2 {
-                margin: 0; /* Xóa margin mặc định của tiêu đề */
+                margin: 0; 
             }
 
             .frame-header h3 {
@@ -403,24 +404,22 @@
             }
 
         .frame-body {
-            padding: 20px; /* Khoảng cách giữa nội dung và viền */
-        }
+            padding: 20px; 
+        } */
 
         /*----------------------------------------*/
 
-        .plus-button {
+/*         .plus-button {
             background: none;
             border: none;
             padding: 0;
             cursor: pointer;
             position: absolute;
-            /* right: 300px; */
-            /* Khoảng cách giữa nút và đỉnh của main content */
             margin-right: 20px;
         }
 
             .plus-button svg {
-                fill: #ffffff; /* Màu sắc của biểu tượng */
+                fill: #ffffff; 
             }
 
         .title {
@@ -433,23 +432,23 @@
             display: none;
         }
 
-        /* Thiết lập kiểu dáng cho khung chứa options */
+       
         .options-frame {
             background-color: #ffffff;
             border: 1px solid #ccc;
             border-radius: 5px;
             padding: 10px;
             position: absolute;
-            /* left: -150px ; /* Đặt vị trí của khung từ bên trái */
-            top: 230px; /* Đặt vị trí của khung từ phía trên dấu cộng */
+         
+            top: 230px;
             width: 150px;
             left: 550px;
         }
-        /* Thiết lập kiểu dáng cho các lựa chọn */
+       
         .option {
             cursor: pointer;
             padding: 10px;
-            /* background-color: #f0f0f0; */
+            
             border-radius: 4px;
             margin-bottom: 0;
         }
@@ -494,7 +493,7 @@
                 color: #fff;
                 cursor: pointer;
                 margin-left: 100px;
-            }
+            } */
 
         footer {
             background-color: #333;
@@ -508,7 +507,7 @@
             display: flex;
             justify-content: center;
             gap: 20px;
-            /* position: relative; Parent container for absolute positioning */
+           
         }
 
             .footer-icons a {
@@ -560,71 +559,8 @@
             margin-left: 150px; /* Đẩy bảng cuối cùng ra xa các icon bên trái */
         }
 
-        .sidebar,
-.main-content,
-.sidebar-right {
-    padding: 20px;
-}
-/* PHẦN NỘI DUNG BÊN TRÁI*/
-.sidebar {
-    width: 200px; /* Độ rộng của cột chủ đề */
-    background-color: #ccc;
-    margin-top: 20px;
-    right: 0;
-    padding-left: 10px;
-}
 
-.sidebar ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: block;
-}
-
-.sidebar ul li {
-    border-bottom: 1px solid #949191;   
-    width: 100%;
-    display: block;
-    margin: 10px 0;
-    text-align: center;
-}
-.sidebar ul li:last-child {
-    border-bottom: none; /* Loại bỏ đường viền ở mục cuối cùng */
-}
-
-.sidebar ul li a {
-    /* text-decoration: none; */
-    color: #333;
-    font-size: 17px;
-    padding: 5px;
-    padding-left: 0;
-    display: inline-block;
-    text-align: center;
-    overflow: hidden;
-    white-space: wrap;
-    text-overflow: ellipsis;
-    font-family: "Platypi", serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-    width: 100%;
-}
-
-.sidebar ul li a:hover {
-    text-decoration: none;
-    color: #333;
-    background-color: #fff;
-}
-
-.sidebar h2 {
-    margin-top: 0px; /* Loại bỏ khoảng cách trên đầu tiêu đề */
-    margin-bottom: 30px; /* Tạo khoảng cách dưới tiêu đề */
-    text-align: center;
-    font-weight: bold;
-    font-size: 50px;
-    font-family: "Lobster", sans-serif;
-}
-
-        @@media screen and (max-width: 768px) {
+       /*  @@media screen and (max-width: 768px) {
             .left-column {
                 display: none;
             }
@@ -632,26 +568,24 @@
             .options-frame {
                 left: 0;
                 transform: translateX(-460px);
-                top: 150px; /* Điều chỉnh top nếu cần */
-                width: 150px; /* Thay đổi kích thước khung nếu cần */
+                top: 150px; 
+                width: 150px;
             }
+        } */
+
+        footer p a:hover {
+            color: white;
         }
 
-        .wrapper {
-                    display: flex;
-                    flex-direction: column;
-                    min-height: 200vh;
-                }
-
-        main {
-            flex:1;
+        footer p a{
+            color: white;
         }
-
+        
         footer {
-                    background-color: black;
-                    color: white;
-                    padding: 20px;
-                } 
+            background-color: rgb(74, 113, 255);
+                color: white;
+                padding: 20px;
+            } 
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
@@ -670,26 +604,11 @@
                     <li><a href="/Schedule" class="@(ViewContext.RouteData.Values["controller"].ToString() == "Schedule" ? "active" : "")"><i class="fas fa-calendar-alt"></i></a></li> <!-- Thời khoá biểu -->
                 </ul>
                 <ul class="login-item">
-                    @* <li><a href="/Account/Login"><i class="fas fa-user"></i></a></li> *@ <!-- Đăng nhập -->
                     <partial name="_LoginPartial" />
                 </ul>
             </div>
-            @* <nav>
-                <div class="menu-icon" onclick="toggleMenu()">
-                    &#9776;
-                </div>
-                <ul class="menu">
-                    <li><a href="/Home/Index">Trang chủ</a></li>
-                    <li><a href="/ClassRooms">Lớp học</a></li>
-                    <li><a href="/BaiTaps">Bài tập</a></li>
-                    <li><a href="/Schedule">Thời khoá biểu</a></li>
-                </ul>
-                <div class="login-item">
-                    <partial name="_LoginPartial" />
-                </div>
-            </nav> *@
             <!-- Menu dọc sẽ hiển thị khi responsive -->
-            <div class="vertical-menu" id="verticalMenu">
+           @*  <div class="vertical-menu" id="verticalMenu">
                 <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
                 <a href="/Home/Index">Trang chủ</a>
                 <a href="/ClassRooms">Lớp học</a>
@@ -699,11 +618,11 @@
                 <a href="https://daotao.hutech.edu.vn/>">Cổng Thông Tin Đào Tạo</a>
                 <a href="https://e-graduate.hutech.edu.vn/">E-Learning Hutech</a>
 
-            </div>
+            </div> *@
         </header>
-        <main>
+     @*    <main> *@
             @RenderBody()
-        </main>
+       @*  </main> *@
         <footer>
             <div class="footer-icons">
                 <a href="https://www.facebook.com/profile.php?id=61560499766790" target="_blank">
@@ -730,7 +649,7 @@
             </div>
             <p>
                 © 2024
-                <a href="https://zalo.me/0358361511" target="_blank" rel="noopener noreferrer">Only A</a>.
+                <a href="https://zalo.me/0358361511" target="_blank" rel="noopener noreferrer" >Only A</a>.
                 All rights reserved.
             </p>
         </footer>
